[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
thiserror = "1.0.30"
bitstream-io = "1.2.0"
hex = "0.4.3"
aoch = { git = "https://github.com/csm123199/aochelper" }
