[package]
name = "day22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
thiserror = "1.0.30"
petgraph = "0.6.0"
rayon = "1.5.1"
indicatif = { version = "0.16.2", features = ["rayon"] }
aoch = { git = "https://github.com/csm123199/aochelper" }
